<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Tv Show</string>
    <string name="title">Title</string>
    <string name="date">date</string>
    <string name="overview">Overview</string>
    <string name="poster">Poster</string>
    <string name="data_image">Data Image</string>
    <string name="rating_image">Rating Image</string>
    <string name="popularity">Popularity</string>
    <string name="adult">Adult</string>
    <string name="vote_count">Vote Count</string>
    <string name="language">Language</string>
    <string name="detail">Detail</string>
    <string name="splashscreen_image">Splashscreen Image</string>
    <string name="share">Share</string>
    <string name="share_movie">Share this movie now</string>
    <string name="share_tv">Share this tv show now</string>
    <string name="share_text">Watch %s now with me!</string>
    <string name="favorite">Favorite</string>
    <string name="menu_newest">Newest</string>
    <string name="menu_oldest">Oldest</string>
    <string name="menu_character">Character</string>
    <string name="search_movie">Search Movie</string>
    <string name="search_tv">Search Tv</string>
</resources>