...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_movie_poster"
                    android:layout_width="250dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/poster"
                    android:src="@color/skin_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/title"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                    app:srcCompat="@drawable/ic_date_range_24" />

                <TextView
                    android:id="@+id/tv_movie_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/date"
                    android:textColor="#FFFFFF"
...
                    android:contentDescription="@string/rating_image"
                    app:layout_constraintStart_toEndOf="@+id/divider2"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:srcCompat="@drawable/ic_star_rate_24" />

                <TextView
                    android:id="@+id/tv_movie_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/rating_image"
                    android:textColor="#FFFFFF"
...
